fixes startpage on mobile

--- a/startpage/css/homepage.css
+++ b/startpage/css/homepage.css
@@ -31,6 +31,9 @@ header {
   padding-right: 10px;
   padding-top: 5px;
 }
+#icons {
+	font-size: 30px;
+}
 .search {
   position: relative;
   bottom: 20px;
